New PUT & POST for appointments
